Bug 898122 - Add some helpful assertions into the JS engine. r=luke

Things go wrong much earlier than the assertion we currently hit.